<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_droplet"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_stats"
            android:title="@string/estatisticas" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_award"
            android:title="@string/conquistas" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_wrench"
            android:title="@string/configuracoes" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/sobre" />
    </group>
</menu>
